--- a/WEB2-CSS_1.html
+++ b/WEB2-CSS_1.html
@@ -5,7 +5,8 @@
         <title>WEB1-Welcome</title>
         <style>
             a {
-                color:red
+                color:black;
+                text-decoration: none;
             }
         </style>
     </head>
@@ -14,7 +15,7 @@
         <h1><a href="index.html">WEB</a></h1>
         <ol>
             <li><a href="1.html">HTML</a></li>
-            <li><a href="2.html">CSS</a></li>
+            <li><a href="2.html" style="text-decoration: underline;">CSS</a></li>
             <li><a href="3.html">JavaScript</a></li>
         </ol>
 
