--- a/WEB2-CSS_box.html
+++ b/WEB2-CSS_box.html
@@ -4,11 +4,32 @@
         <meta charset="utf-8">
         <title></title>
         <style>
-            h1, a {
+/*             
+            block level element
+            h1  {
                 border-width: 5px;
                 border-color: red;
                 border-style: solid;
             }
+
+            inline element
+            a {
+                border-width: 5px;
+                border-color: red;
+                border-style: solid;
+            }
+            */
+
+            /* h1, a {
+                border-width: 5px;
+                border-color: red;
+                border-style: solid;
+            } */
+
+            h1, a {
+                border: 5px red solid;
+            }
+            
         </style>
     </head>
 
