--- a/1.html
+++ b/1.html
@@ -8,20 +8,24 @@
 
     <body>
         <a href="WEB2-CSS_6.html"><h1>WEB</h1></a>
-        <ol>
-            <a href="1.html"><li>HTML</li></a>
-            <a href="2.html"><li>CSS</li></a>
-            <a href="3.html"><li>JavaScript</li></a>
-        </ol>
+        <div id="grid">
+            <ol>
+                <a href="1.html"><li>HTML</li></a>
+                <a href="2.html"><li>CSS</li></a>
+                <a href="3.html"><li>JavaScript</li></a>
+            </ol>
 
-        <h2>HTML</h2>
-        <p>
-            <a href="https://html.spec.whatwg.org/multipage/">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-        </p>
-        <img src="img/html-img.jpg">
-        <br>
-        <p>
-            HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
-        </p>
+            <div id="article">
+                <h2>HTML</h2>
+                <p>
+                    <a href="https://html.spec.whatwg.org/multipage/">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+                </p>
+                <img src="img/html-img.jpg">
+                <br>
+                <p>
+                    HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
